fixed alignment of text in footer

--- a/components/footer/footer.sass
+++ b/components/footer/footer.sass
@@ -17,6 +17,7 @@
     flex-wrap: wrap
     font-size: 16px
     color: #fff
+    align-items: center
     @media screen and (max-width: 460px)
       display: inline-flex
       flex-direction: column
